SERVER-59727 TenantMigrationAccessBlockerRegistry::_remove doesn't re…